style: fix padding issues on small screens home

--- a/components/testimonials/testimonialList.module.css
+++ b/components/testimonials/testimonialList.module.css
@@ -3,11 +3,15 @@
   position: relative;
   background-color: rgba(255, 255, 255, 0.8);
   /* background-color: var(--white); */
-  padding: 3rem;
   z-index: 1;
   width: 100%;
   /* max-width: 600px; */
   margin: 0 auto;
+}
+@media screen and (min-width: 60rem) {
+  .testimonialList {
+    padding: 3rem;
+  }
 }
 
 .customerTestimonialsTitle {
